Create package_LAB notebook

--- a/package_DBR.ipynb
+++ b/package_DBR.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f760d02b",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9d7981f3",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
     "\n",
     "for i in range(0,N):\n",
     "    t.append(i*Ts)\n",
-    "    SelectPath_RT(MVPath,t,MV)\n",
+    "    SelectPath_RT(MVPath,t,MV) #Permet de chopper la valeur de MV selon MVPath et t\n",
     "    Delay_RT(MV,theta,Ts,MVDelay)\n",
     "    FO_RT(MVDelay,Kp,T,Ts,PV_EBD)\n",
     "    FO_RT(MVDelay,Kp,T,Ts,PV_EFD,0,'EFD')\n",
@@ -1415,9 +1415,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
