Added defs of functions

--- a/package_LAB.ipynb
+++ b/package_LAB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,13 @@
     "from scipy.optimize import minimize\n",
     "from matplotlib import colors as mcolors\n",
     "\n",
+    "from importlib import reload\n",
+    "\n",
     "import package_DBR\n",
     "from package_DBR import myRound, SelectPath_RT, Delay_RT, FO_RT, FOPDT, SOPDT, FOPDT_cost, SOPDT_cost, Process, Bode\n",
     "\n",
     "import package_LAB\n",
+    "package_LAB = reload(package_LAB)\n",
     "from package_LAB import LL_RT, LL"
    ]
   },
