--- a/Simulation_OLP.ipynb
+++ b/Simulation_OLP.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "d87dec76-a91d-41ea-84d6-09397475d4fc",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,9 @@
     "plt.ylabel('Value of PV')\n",
     "plt.xlabel('Time [s]')\n",
     "plt.legend(loc='best')  \n",
-    "plt.xlim([0, np.max(tm)])"
+    "plt.xlim([0, np.max(tm)])\n",
+    "plt.savefig('Plots\\SimOLP_STEP_PV.png',transparent=True)\n",
+    "plt.savefig('Plots\\SimOLP_STEP_PV.pdf',transparent=True)\n"
    ]
   },
   {
@@ -291,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "d702d33f",
    "metadata": {},
    "outputs": [
@@ -388,7 +390,9 @@
     "plt.semilogx(omega, (180/np.pi)*np.unwrap(np.angle(Ps_SOPT2_GRAPH)),'b--',linewidth=2)\n",
     "plt.xlim([np.min(omega), np.max(omega)])\n",
     "plt.ylim([np.max([ph_min, -200]), ph_max])\n",
-    "plt.ylabel('Phase [°]')"
+    "plt.ylabel('Phase [°]')\n",
+    "plt.savefig('Plots\\SimOLP_BODE_PV.png',transparent=True)\n",
+    "plt.savefig('Plots\\SimOLP_BODE_PV.pdf',transparent=True)"
    ]
   },
   {
@@ -496,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "17a58beb",
    "metadata": {},
    "outputs": [
@@ -538,7 +542,9 @@
     "plt.ylabel('Value of DV')\n",
     "plt.xlabel('Time [s]')\n",
     "plt.legend(loc='best')  \n",
-    "plt.xlim([0, np.max(tm)])"
+    "plt.xlim([0, np.max(tm)])\n",
+    "plt.savefig('Plots\\SimOLP_STEP_DV.png',transparent=True)\n",
+    "plt.savefig('Plots\\SimOLP_STEP_DV.pdf',transparent=True)"
    ]
   },
   {
@@ -551,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "eb5d1dea",
    "metadata": {},
    "outputs": [
@@ -615,7 +621,10 @@
     "plt.semilogx(omega, (180/np.pi)*np.unwrap(np.angle(Ps_SOPDTOPT)),'lime',linewidth=2)\n",
     "plt.xlim([np.min(omega), np.max(omega)])\n",
     "plt.ylim([np.max([ph_min, -200]), ph_max])\n",
-    "plt.ylabel('Phase [°]')"
+    "plt.ylabel('Phase [°]')\n",
+    "\n",
+    "plt.savefig('Plots\\SimOLP_BODE_DV.png',transparent=True)\n",
+    "plt.savefig('Plots\\SimOLP_BODE_DV.pdf',transparent=True)"
    ]
   }
  ],
