--- a/package_LAB.ipynb
+++ b/package_LAB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,33 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function LL_RT in module package_LAB:\n",
-      "\n",
-      "LL_RT(MV, Kp, Tlead, Tlag, Ts, PV, PVInit=0, method='EBD')\n",
-      "    The function \"LL_RT\" needs to be included in a \"for or while loop\".\n",
-      "    \n",
-      "    :MV: input vector\n",
-      "    :Kp: process gain\n",
-      "    :Tlead: lead time constant [s]\n",
-      "    :Tlag: lag time constant [s]\n",
-      "    :Ts: sampling period [s]\n",
-      "    :PV: output vector\n",
-      "    :PVInit: (optional: default value is 0)\n",
-      "    :method: discretisation method (optional: default value is 'EBD')\n",
-      "        EBD: Euler Backward difference\n",
-      "        EFD: Euler Forward difference\n",
-      "        TRAP: Trapezoïdal method (Not implemented yet)\n",
-      "    \n",
-      "    The function \"LL_RT\" appends a value to the output vector \"PV\".\n",
-      "    The appended value is obtained from a recurrent equation that depends on the discretisation method.\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'LL_RT' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m help(LL_RT)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'LL_RT' is not defined"
      ]
     }
    ],
@@ -74,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +204,12 @@
     "Ts = 1\n",
     "N = int(TSim/Ts) + 1\n",
     "\n",
-    "# Path for MV\n",
+    "# Path for variables\n",
     "PVPath = {0: 0, 5: 1, 50: 2, 80: 3, TSim: 3}\n",
+    "SPPath = {0: 0, 5: 1, 50: 2, 80: 3, TSim: 3}\n",
+    "ManPath = {0: False, TSim: 3}\n",
+    "MVManPath = {0: 0, TSim: 0}\n",
+    "MVFFPath = {0: 0, TSim: 0}\n",
     "\n",
     "t = []\n",
     "SP = []\n",
@@ -259,21 +248,23 @@
     "plt.figure(figsize = (15,9))\n",
     "\n",
     "plt.subplot(2,1,1)\n",
+    "plt.step(t,SP,'b-',label='SP',where='post')\n",
+    "plt.step(t,PV,'b-',label='PV',where='post')\n",
     "plt.step(t,MV,'b-',label='MV',where='post')\n",
-    "plt.step(t,MVDelay,'b-',linewidth=0.5,label='MV plus delay',where='post')\n",
+    "plt.step(t,E,'b-',linewidth=0.5,label='Error',where='post')\n",
     "plt.ylabel('Value of MV')\n",
-    "plt.title('Lead Lag response')\n",
+    "plt.title('PID response')\n",
     "plt.legend(loc='best')\n",
     "plt.xlim([0, TSim])\n",
     "\n",
-    "plt.subplot(2,1,2)\n",
-    "plt.step(t,PV_EBD,'g-',label='Lead-Lag response (EBD)',where='post')\n",
-    "plt.step(t,PV_EFD,'lime',label='Lead-Lag response (EFD)',where='post')\n",
-    "plt.step(t,PV_TRAP,'springgreen',label='Lead-Lag response (TRAP)',where='post')\n",
-    "plt.ylabel('Value of PV')\n",
-    "plt.xlabel('Time [s]')\n",
-    "plt.legend(loc='best')\n",
-    "plt.xlim([0, TSim])    "
+    "#plt.subplot(2,1,2)\n",
+    "#plt.step(t,PV_EBD,'g-',label='Lead-Lag response (EBD)',where='post')\n",
+    "#plt.step(t,PV_EFD,'lime',label='Lead-Lag response (EFD)',where='post')\n",
+    "#plt.step(t,PV_TRAP,'springgreen',label='Lead-Lag response (TRAP)',where='post')\n",
+    "#plt.ylabel('Value of PV')\n",
+    "#plt.xlabel('Time [s]')\n",
+    "#plt.legend(loc='best')\n",
+    "#plt.xlim([0, TSim])    "
    ]
   }
  ],
