--- a/package_LAB.ipynb
+++ b/package_LAB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "(0.0, 100.0)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "(0.0, 1500.0)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,13 @@
     "P.parameters['Kp'] = K_SOPDT_OPT\n",
     "P.parameters['Tlag1'] = T1_SOPDT_OPT\n",
     "P.parameters['Tlag2'] = T2_SOPDT_OPT\n",
-    "P.parameters['theta'] = theta_SOPDT_OPT"
+    "P.parameters['theta'] = theta_SOPDT_OPT\n",
+    "\n",
+    "C = Controller({'Kc':Kc,'Ti':Ti,'Td':Td,'alpha':alpha})\n",
+    "\n",
+    "omega = np.logspace(-3, 1, 10000)\n",
+    "\n",
+    "margins(P, C, omega)"
    ]
   }
  ],
