--- a/TCLab_CLP_PID_FF.ipynb
+++ b/TCLab_CLP_PID_FF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "from IPython.display import display, clear_output\n",
     "\n",
     "import package_DBR\n",
-    "from package_DBR import myRound, SelectPath_RT\n",
+    "from package_DBR import myRound, SelectPath_RT, Delay_RT\n",
     "from package_LAB import PID_RT, LL_RT, IMC"
    ]
   },
@@ -26,22 +26,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ts = 1\n",
+    "UseFF = True\n",
+    "ManFF = False\n",
     "\n",
+    "alpha = 5\n",
+    "MVMin = 0\n",
+    "MVMax = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_SOPDT_OPT = 0.3562231735602847\n",
+    "T1_SOPDT_OPT = 164.90136281744202\n",
+    "T2_SOPDT_OPT = 41.937854162157095\n",
+    "theta_SOPDT_OPT = 1.058634883965729\n",
+    "\n",
+    "K_SOPDT_OPT_DV = 0.3470577806298568\n",
+    "T1_SOPDT_OPT_DV = 160.56027097048144\n",
+    "T2_SOPDT_OPT_DV = 35.99302014643125\n",
+    "theta_SOPDT_OPT_DV = 9.177287203018302"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.9742706437685564\n"
+     ]
+    }
+   ],
+   "source": [
+    "K_FF = -K_SOPDT_OPT_DV/K_SOPDT_OPT\n",
+    "print(K_FF)\n",
+    "thetaFF = max([0, theta_SOPDT_OPT_DV - theta_SOPDT_OPT])\n",
+    "\n",
+    "TLEAD_LL1 = T1_SOPDT_OPT\n",
+    "TLAG_LL1 = T1_SOPDT_OPT_DV\n",
+    "\n",
+    "TLEAD_LL2 = T2_SOPDT_OPT\n",
+    "TLAG_LL2 = T2_SOPDT_OPT_DV\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gammas = [0.2, 0.9]\n",
+    "\n",
+    "Kcs = []\n",
+    "Tis = []\n",
+    "Tds = []\n",
+    "\n",
+    "for gamma in gammas:\n",
+    "    Kc, Ti, Td = IMC(K_SOPDT_OPT, T1_SOPDT_OPT, T2_SOPDT_OPT, theta_SOPDT_OPT, gamma)\n",
+    "    Kcs.append(Kc)\n",
+    "    Tis.append(Ti)\n",
+    "    Tds.append(Td)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "MV0 = 50\n",
     "DV0 = 50\n",
     "\n",
-    "Kc = 13.85877273407483\n",
-    "Ti = 165.4306802594249\n",
-    "Td = 0.5276238204977329\n",
-    "alpha = 5\n",
+    "PV0 = 49.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ts = 1\n",
     "\n",
-    "Kp =\n",
-    "Tlead =\n",
-    "Tlag =\n",
-    "\n",
-    "MVMin = 0\n",
-    "MVMax = 100\n",
+    "Kc = Kcs[0]\n",
+    "Ti = Tis[0]\n",
+    "Td = Tds[0]\n",
     "\n",
     "NumRTsteps = 50"
    ]
@@ -118,23 +194,31 @@
     "E = []\n",
     "Man = []\n",
     "MVMan = []\n",
+    "MVFF_Delay = []\n",
+    "MVFF_LL1 = []\n",
     "i = 0\n",
     "\n",
     "# Path for variables\n",
     "MVManPath = {0:50, NumRTsteps:50}\n",
     "SPPath = {0: 50, 5: 60, NumRTsteps : 60}\n",
-    "\n",
+    "DVPath = {0: 50, 2000: 60, NumRTsteps : 60}\n",
     "ManPath = {0: False, 600: True, 700:False, NumRTsteps : False}\n",
     "\n",
     "# Experiment is started\n",
     "while Exp:\n",
     "    t.append(i*Ts)\n",
-    "\n",
+    "    SelectPath_RT(DVPath, t, DV)\n",
     "    SelectPath_RT(SPPath,t,SP)\n",
     "    SelectPath_RT(ManPath,t,Man)\n",
     "    SelectPath_RT(MVManPath,t,MVMan)\n",
     "\n",
-    "    LL_RT(MV, Kp, Tlead, Tlag, Ts, PV)\n",
+    "    Delay_RT(DV-DV0*np.ones_like(DV),thetaFF,Ts,MVFF_Delay,0)\n",
+    "\n",
+    "    LL_RT(MVFF_Delay,K_FF,TLEAD_LL1,TLAG_LL1,Ts,MVFF_LL1,0)\n",
+    "    if UseFF:\n",
+    "        LL_RT(MVFF_LL1, 1, TLEAD_LL2, TLAG_LL2, Ts, MVFF, 0)\n",
+    "    else:\n",
+    "        LL_RT(MVFF_LL1, 0, TLEAD_LL2, TLAG_LL2, Ts, MVFF, 0)\n",
     "\n",
     "    lab.Q1(MV[-1])\n",
     "    lab.Q2(DV[-1])\n",
@@ -223,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
