--- a/TCLab_CLP_PID_FF.ipynb
+++ b/TCLab_CLP_PID_FF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,17 @@
     "\n",
     "import package_DBR\n",
     "from package_DBR import myRound, SelectPath_RT, Delay_RT\n",
-    "from package_LAB import PID_RT, LL_RT, IMC"
+    "from package_LAB import PID_RT, LL_RT, IMC, OLP_FF, OLP_NOFF, CLP_FF, CLP_NOFF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "UseFF = True\n",
+    "mode = CLP_FF\n",
+    "\n",
     "ManFF = False\n",
     "\n",
     "alpha = 5\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,11 +207,26 @@
     "MVFF_LL1 = []\n",
     "i = 0\n",
     "\n",
+    "if mode == CLP_FF:\n",
+    "    UseFF = True\n",
+    "    ManPath = {0: True, Treach: False, NumRTsteps : False}\n",
+    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "elif mode == CLP_NOFF:\n",
+    "    UseFF = False\n",
+    "    ManPath = {0: True, Treach: False, NumRTsteps : False}\n",
+    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "elif mode == OLP_FF:\n",
+    "    UseFF = True\n",
+    "    ManPath = {0: True, NumRTsteps : True}\n",
+    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "elif mode == OLP_NOFF:\n",
+    "    UseFF = False\n",
+    "    ManPath = {0: True, NumRTsteps : True}\n",
+    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "\n",
     "# Path for variables\n",
     "SPPath = {0: 50, 500: 60, NumRTsteps : 60}\n",
     "DVPath = {0: 50, 750: 65, NumRTsteps : 0}\n",
-    "MVManPath = {0:60, NumRTsteps:0}\n",
-    "ManPath = {0: True, Treach: False, NumRTsteps : True}\n",
     "\n",
     "# Experiment is started\n",
     "while Exp:\n",
