--- a/TCLab_CLP_PID_FF.ipynb
+++ b/TCLab_CLP_PID_FF.ipynb
@@ -219,6 +219,7 @@
     "    UseFF = True\n",
     "    ManPath = {0: True, NumRTsteps : True}\n",
     "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "    ManFF = True\n",
     "elif mode == OLP_NOFF:\n",
     "    UseFF = False\n",
     "    ManPath = {0: True, NumRTsteps : True}\n",
@@ -250,7 +251,7 @@
     "    else:\n",
     "        LL_RT(MVFF_LL1, 0, TLEAD_LL2, TLAG_LL2, Ts, MVFF, 0)\n",
     "\n",
-    "    PID_RT(SP, PV, Man, MVMan, MVFF, Kc, Ti, Td, alpha, Ts, MVMin, MVMax, MV, MVP, MVI, MVD, E)\n",
+    "    PID_RT(SP, PV, Man, MVMan, MVFF, Kc, Ti, Td, alpha, Ts, MVMin, MVMax, MV, MVP, MVI, MVD, E, ManFF)\n",
     "\n",
     "    lab.Q1(MV[-1])\n",
     "    lab.Q2(DV[-1])\n",
@@ -346,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
