Change SPPath for Open Loop

--- a/TCLab_CLP_PID_FF.ipynb
+++ b/TCLab_CLP_PID_FF.ipynb
@@ -217,13 +217,15 @@
     "    MVManPath = {0:60, NumRTsteps:60}\n",
     "elif mode == OLP_FF:\n",
     "    UseFF = True\n",
-    "    ManPath = {0: True, NumRTsteps : True}\n",
-    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "    ManPath = {0: True, NumRTSteps : True}\n",
+    "    MVManPath = {0:60, NumRTSteps:60}\n",
+    "    SPPath = {0: 50, NumRTSteps : 50}\n",
     "    ManFF = True\n",
     "elif mode == OLP_NOFF:\n",
     "    UseFF = False\n",
-    "    ManPath = {0: True, NumRTsteps : True}\n",
-    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "    ManPath = {0: True, NumRTSteps : True}\n",
+    "    SPPath = {0: 50, NumRTSteps : 50}\n",
+    "    MVManPath = {0:60, NumRTSteps:60}\n",
     "\n",
     "# Path for variables\n",
     "SPPath = {0: 50, 500: 60, NumRTsteps : 60}\n",
