--- a/TCLab_CLP_PID_FF.ipynb
+++ b/TCLab_CLP_PID_FF.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode = OLP_NOFF\n",
+    "mode = OLP_FF\n",
     "\n",
     "ManFF = False\n",
     "\n",
@@ -316,7 +316,7 @@
     "\n",
     "my_data = np.vstack((t.T,MV.T,MVP.T,MVI.T,MVD.T,SP.T,PV.T,DV.T,Man.T,MVMan.T,))\n",
     "my_data = my_data.T\n",
-    "nameFile = 'Data/TCLab_PID_OLP_NOFF' + date_time + '.txt'\n",
+    "nameFile = 'Data/TCLab_PID_OLP_FF' + date_time + '.txt'\n",
     "if not os.path.exists('Data'):\n",
     "    os.makedirs('Data')\n",
     "np.savetxt(nameFile,my_data,delimiter=',',header='t,MV,MVP,MVI,MVD,SP,PV,DV,Man,MVMan,',comments='')\n",
@@ -327,7 +327,7 @@
     "if not os.path.exists('Plots'):\n",
     "    os.makedirs('Plots')\n",
     "\n",
-    "titleName = 'TCLab_PID_OLP_NOFF' + date_time\n",
+    "titleName = 'TCLab_PID_OLP_FF' + date_time\n",
     "plt.savefig('Plots\\\\' + titleName + '.png',transparent=True)\n",
     "plt.savefig('Plots\\\\' + titleName + '.pdf',transparent=True)\n"
    ]
