--- a/TCLab_CLP_PID_FF.ipynb
+++ b/TCLab_CLP_PID_FF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "\n",
     "import package_DBR\n",
     "from package_DBR import myRound, SelectPath_RT, Delay_RT\n",
-    "from package_LAB import PID_RT, LL_RT, IMC, OLP_FF, OLP_NOFF, CLP_FF, CLP_NOFF"
+    "from package_LAB import PID_RT, LL_RT, IMC, OLP_FF, OLP_NOFF, CLP_FF, CLP_NOFF, CLP_FF_FOLLOW"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode = OLP_FF\n",
+    "mode = CLP_FF\n",
     "\n",
     "ManFF = False\n",
     "\n",
@@ -211,25 +211,37 @@
     "    UseFF = True\n",
     "    ManPath = {0: True, Treach: False, NumRTsteps : False}\n",
     "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "    DVPath = {0: 50, 750: 65, NumRTsteps : 0}\n",
+    "    SPPath = {0: 50, NumRTsteps : 0}\n",
+    "elif mode == CLP_FF_FOLLOW:\n",
+    "    UseFF = True\n",
+    "    ManPath = {0: True, Treach: False, NumRTsteps : False}\n",
+    "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "    DVPath = {0: 50, NumRTsteps : 0}\n",
+    "    SPPath = {0: 50, 500: 60, 750: 45, NumRTsteps : 0}\n",
     "elif mode == CLP_NOFF:\n",
     "    UseFF = False\n",
     "    ManPath = {0: True, Treach: False, NumRTsteps : False}\n",
     "    MVManPath = {0:60, NumRTsteps:60}\n",
+    "    DVPath = {0: 50, 750: 65, NumRTsteps : 0}\n",
+    "    SPPath = {0: 50, NumRTsteps : 0}\n",
     "elif mode == OLP_FF:\n",
     "    UseFF = True\n",
     "    ManPath = {0: True, NumRTsteps : True}\n",
     "    MVManPath = {0:60, NumRTsteps:60}\n",
-    "    SPPath = {0: 50, NumRTsteps : 50}\n",
+    "    DVPath = {0: 50, 750: 65, NumRTsteps : 0}\n",
+    "    SPPath = {0: 50, NumRTsteps : 0}\n",
     "    ManFF = True\n",
     "elif mode == OLP_NOFF:\n",
     "    UseFF = False\n",
     "    ManPath = {0: True, NumRTsteps : True}\n",
-    "    SPPath = {0: 50, NumRTsteps : 50}\n",
+    "    SPPath = {0: 50, NumRTsteps : 0}\n",
+    "    DVPath = {0: 50, 750: 65, NumRTsteps : 0}\n",
     "    MVManPath = {0:60, NumRTsteps:60}\n",
     "\n",
     "# Path for variables\n",
-    "SPPath = {0: 50, 500: 60, NumRTsteps : 60}\n",
-    "DVPath = {0: 50, 750: 65, NumRTsteps : 0}\n",
+    "\n",
+    "\n",
     "\n",
     "# Experiment is started\n",
     "while Exp:\n",
